Refs #1931 fix bug IE8: breadcrumbs hidden by menu level 3

--- a/cms_frontend/css/ie/ie8-custom.css
+++ b/cms_frontend/css/ie/ie8-custom.css
@@ -41,11 +41,13 @@ margin: 0;
 }
 
 .global-menu.menu.nav.navbar-nav.nav-show-level-2 {
-margin-bottom: 18px;
+/* margin-bottom: 18px; */
+margin-bottom: 36px;
 }
 
 .global-menu.menu.nav.navbar-nav.nav-show-level-3 {
-margin-bottom: 36px;
+/* margin-bottom: 36px; */
+margin-bottom: 74px;
 }
 
 .global-menu.menu.nav.navbar-nav li {
@@ -69,10 +71,6 @@ width: 955px;
 
 .search-area {
 margin-top: 5px;
-}
-
-.not-front .region.center-column {
-margin-top: 15px;
 }
 
 
